# weighted-metapath2vec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  environment.yml  pyproject.toml
tests/: test_metapath.py  test_metapath_matching.py  test_model.py  test_random_walk.py  test_wmp2vec.py  test_wmp2vec_model.py
weighted_metapath2vec/: __init__.py  model.py  random_walk.py
wmetapath2vec/: __init__.py  model.py  random_walk.py
wmp2vec/: random_walk.py  wmp2vec_model.py
