[tool.poetry]
name = "wMetapath2Vec"
version = "0.1.3"
description = "A weighted metapath2vec to embed heterogenous graphs"
authors = ["Morteza Ansarinia <ansarinia@me.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/morteza/wmetapath2vec"
repository = "https://github.com/morteza/wmetapath2vec"
keywords = ["machine learning", "graph embedding", "metapath2vec"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
flake8 = "^4.0.1"
gensim = "^4.1"
networkx = "^2.8"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
ipykernel = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
