[tool.poetry]
name = "weighted-metapath2vec"
version = "0.1.4"
description = "A weighted alternative to metapath2vec for heterogenous graph embedding"
authors = ["Morteza Ansarinia <ansarinia@me.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/morteza/weighted-metapath2vec"
repository = "https://github.com/morteza/weighted-metapath2vec"
keywords = ["machine learning", "graph embedding", "metapath2vec"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
flake8 = "^4.0.1"
gensim = "^4.1"
networkx = "^2.8"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
flake8 = "^4"
ipykernel = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
